--- a/CRUDEmp/src/view/CadastroUsuario.fxml
+++ b/CRUDEmp/src/view/CadastroUsuario.fxml
@@ -44,10 +44,10 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="12.0" layoutY="51.0" prefHeight="25.0" prefWidth="300.0" />
-                  <TextField layoutX="14.0" layoutY="109.0" prefHeight="25.0" prefWidth="300.0" />
-                  <TextField layoutX="14.0" layoutY="168.0" prefHeight="25.0" prefWidth="301.0" />
-                  <TextField layoutX="12.0" layoutY="223.0" prefHeight="25.0" prefWidth="299.0" />
+                  <TextField fx:id="txtNome" layoutX="12.0" layoutY="51.0" prefHeight="25.0" prefWidth="300.0" />
+                  <TextField fx:id="txtTelefone" layoutX="14.0" layoutY="109.0" prefHeight="25.0" prefWidth="300.0" />
+                  <TextField fx:id="txtDataNascimento" layoutX="14.0" layoutY="168.0" prefHeight="25.0" prefWidth="301.0" />
+                  <TextField fx:id="txtEndereco" layoutX="12.0" layoutY="223.0" prefHeight="25.0" prefWidth="299.0" />
                   <Label layoutX="14.0" text="Dados Pessoais">
                      <font>
                         <Font name="System Bold" size="18.0" />
@@ -58,7 +58,7 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField layoutX="12.0" layoutY="278.0" prefHeight="25.0" prefWidth="300.0" />
+                  <TextField fx:id="txtEmail" layoutX="12.0" layoutY="278.0" prefHeight="25.0" prefWidth="300.0" />
                   <Button layoutX="19.0" layoutY="316.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="77.0" text="Salvar">
                      <font>
                         <Font name="System Bold" size="14.0" />
