--- a/CRUDEmp/src/view/CadastroEmprestimo.fxml
+++ b/CRUDEmp/src/view/CadastroEmprestimo.fxml
@@ -48,21 +48,22 @@
                      </font>
                   </Label>
                   <TextField fx:id="txtCodUser" layoutX="151.0" layoutY="21.0" prefHeight="25.0" prefWidth="66.0" />
-                  <TextField fx:id="txtCodLivro" layoutX="151.0" layoutY="55.0" prefHeight="25.0" prefWidth="65.0" />
+                  <TextField fx:id="txtCodLivro" layoutX="152.0" layoutY="55.0" prefHeight="25.0" prefWidth="65.0" />
                   <TextField fx:id="txtDataEmprestimo" layoutX="151.0" layoutY="93.0" />
                   <Label layoutX="327.0" layoutY="97.0" text="Ex: dd/mm/aaaa" />
                   <TextField fx:id="txtDataEntrega" layoutX="151.0" layoutY="129.0" />
                   <Label layoutX="327.0" layoutY="133.0" text="Ex: dd/mm/aaaa" />
-                  <Button layoutX="14.0" layoutY="166.0" mnemonicParsing="false" text="Salvar">
+                  <Button fx:id="btnSalvar" layoutX="14.0" layoutY="166.0" mnemonicParsing="false" onAction="#handlerSalvar" text="Salvar">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="84.0" layoutY="166.0" mnemonicParsing="false" text="Cancelar">
+                  <Button fx:id="btnCancelar" layoutX="84.0" layoutY="166.0" mnemonicParsing="false" onAction="#handlerCancelar" text="Cancelar">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Button>
+                  <Label fx:id="lblErro" layoutX="211.0" layoutY="173.0" />
                </children>
             </Pane>
          </left>
