Arrumando os controllers

--- a/CRUDEmp/src/view/UsuariosCadastrados.fxml
+++ b/CRUDEmp/src/view/UsuariosCadastrados.fxml
@@ -13,7 +13,7 @@
          <center>
             <Pane prefHeight="378.0" prefWidth="646.0" BorderPane.alignment="CENTER">
                <children>
-                  <TableView layoutX="55.0" layoutY="26.0" prefHeight="171.0" prefWidth="693.0">
+                  <TableView fx:id="tbluser" layoutX="55.0" layoutY="26.0" prefHeight="171.0" prefWidth="693.0">
                     <columns>
                       <TableColumn prefWidth="152.6666717529297" text="Nome" />
                       <TableColumn prefWidth="123.33332824707031" text="Telefone" />
@@ -42,7 +42,7 @@
       </BorderPane>
       <Button fx:id="fechar" layoutX="688.0" layoutY="414.0" mnemonicParsing="false" onAction="#fecharMet" text="Fechar" />
       <Button fx:id="edtUser" layoutX="378.0" layoutY="401.0" mnemonicParsing="false" onAction="#editPetMet" text="Editar" />
-      <Button id="handleBtnAdd" fx:id="handleBtnAdd" layoutX="227.0" layoutY="402.0" mnemonicParsing="false" onAction="#handleBtnAdd" text="Cadastrar Emprestimo" />
-      <Button fx:id="delPet" layoutX="451.0" layoutY="401.0" mnemonicParsing="false" onAction="#delPetMet" text="Finalizar emprestimo" />
+      <Button id="handleBtnAdd" fx:id="btncadastrarUsuario" layoutX="227.0" layoutY="402.0" mnemonicParsing="false" onAction="#handleBtnAdd" text="Cadastrar Emprestimo" />
+      <Button fx:id="delUser" layoutX="451.0" layoutY="401.0" mnemonicParsing="false" onAction="#delPetMet" text="Finalizar emprestimo" />
    </children>
 </AnchorPane>
