--- a/CRUDEmp/src/view/CadastroUsuario.fxml
+++ b/CRUDEmp/src/view/CadastroUsuario.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="556.0" prefWidth="694.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.fatec.labd.crudpet.controller.CadsController">
+<AnchorPane id="AnchorPane" prefHeight="556.0" prefWidth="694.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroUsuariosController">
    <children>
       <BorderPane layoutX="-1.0" prefHeight="556.0" prefWidth="694.0">
          <top>
