--- a/CRUDEmp/src/view/CadastroUsuario.fxml
+++ b/CRUDEmp/src/view/CadastroUsuario.fxml
@@ -59,12 +59,12 @@
                      </font>
                   </Label>
                   <TextField fx:id="txtEmail" layoutX="12.0" layoutY="278.0" prefHeight="25.0" prefWidth="300.0" />
-                  <Button layoutX="19.0" layoutY="316.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="77.0" text="Salvar">
+                  <Button fx:id="btnSalvar" layoutX="19.0" layoutY="316.0" mnemonicParsing="false" onAction="#handlerSalvar" prefHeight="30.0" prefWidth="77.0" text="Salvar">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Button>
-                  <Button layoutX="107.0" layoutY="316.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="77.0" text="Cancelar">
+                  <Button fx:id="btnCancelar" layoutX="107.0" layoutY="316.0" mnemonicParsing="false" onAction="#handlerCancelar" prefHeight="30.0" prefWidth="77.0" text="Cancelar">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
