--- a/CRUDEmp/src/view/UsuariosCadastrados.fxml
+++ b/CRUDEmp/src/view/UsuariosCadastrados.fxml
@@ -15,11 +15,11 @@
                <children>
                   <TableView fx:id="tbluser" layoutX="55.0" layoutY="26.0" prefHeight="171.0" prefWidth="693.0">
                     <columns>
-                      <TableColumn prefWidth="152.6666717529297" text="Nome" />
-                      <TableColumn prefWidth="123.33332824707031" text="Telefone" />
-                        <TableColumn prefWidth="137.33331298828125" text="Data de Nascimento" />
-                        <TableColumn minWidth="3.0" prefWidth="131.66668701171875" text="Endereço" />
-                        <TableColumn prefWidth="150.66668701171875" text="E-mail" />
+                      <TableColumn fx:id="tblColNome" prefWidth="152.6666717529297" text="Nome" />
+                      <TableColumn fx:id="tblColTelefone" prefWidth="123.33332824707031" text="Telefone" />
+                        <TableColumn fx:id="tblColData" prefWidth="137.33331298828125" text="Data de Nascimento" />
+                        <TableColumn fx:id="tblColEndereco" minWidth="3.0" prefWidth="131.66668701171875" text="Endereço" />
+                        <TableColumn fx:id="tblColEmail" prefWidth="150.66668701171875" text="E-mail" />
                     </columns>
                   </TableView>
                </children>
@@ -40,9 +40,9 @@
             <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
          </bottom>
       </BorderPane>
-      <Button fx:id="fechar" layoutX="688.0" layoutY="414.0" mnemonicParsing="false" onAction="#fecharMet" text="Fechar" />
-      <Button fx:id="edtUser" layoutX="378.0" layoutY="401.0" mnemonicParsing="false" onAction="#editPetMet" text="Editar" />
-      <Button id="handleBtnAdd" fx:id="btncadastrarUsuario" layoutX="227.0" layoutY="402.0" mnemonicParsing="false" onAction="#handleBtnAdd" text="Cadastrar Emprestimo" />
-      <Button fx:id="delUser" layoutX="451.0" layoutY="401.0" mnemonicParsing="false" onAction="#delPetMet" text="Finalizar emprestimo" />
+      <Button fx:id="fechar" layoutX="688.0" layoutY="414.0" mnemonicParsing="false" onAction="#fechar" text="Fechar" />
+      <Button fx:id="edtUser" layoutX="378.0" layoutY="401.0" mnemonicParsing="false" onAction="#editUsuario" text="Editar" />
+      <Button id="handleBtnAdd" fx:id="btncadastrarUsuario" layoutX="227.0" layoutY="402.0" mnemonicParsing="false" onAction="#cadUsuario" text="Cadastrar Usuário" />
+      <Button fx:id="delUser" layoutX="451.0" layoutY="401.0" mnemonicParsing="false" onAction="#delUsuario" text="Deletar Usuário" />
    </children>
 </AnchorPane>
