Emprestimo quase pronto

--- a/CRUDEmp/src/view/CadastroEmprestimo.fxml
+++ b/CRUDEmp/src/view/CadastroEmprestimo.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="605.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="model.CadastroEmprestimoController">
+<AnchorPane id="AnchorPane" prefHeight="605.0" prefWidth="628.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.CadastroEmprestimoController">
    <children>
       <BorderPane prefHeight="605.0" prefWidth="628.0">
          <top>
