--- a/CRUDEmp/src/view/mainEmp.fxml
+++ b/CRUDEmp/src/view/mainEmp.fxml
@@ -24,7 +24,7 @@
                 <Button fx:id="edtLivro" layoutX="336.0" layoutY="128.0" mnemonicParsing="false" onAction="#editLivro" text="Editar livro" />
                 <Button fx:id="delLivro" layoutX="418.0" layoutY="128.0" mnemonicParsing="false" onAction="#delLivro" text="Deletar livro" />
                 <Button fx:id="fechar" layoutX="518.0" layoutY="161.0" mnemonicParsing="false" onAction="#fecharMet" text="Fechar" />
-            <Button layoutX="25.0" layoutY="14.0" mnemonicParsing="false" text="Lista de emprestimos" />
+            <Button fx:id="btnlistaEmprestimos" layoutX="25.0" layoutY="14.0" mnemonicParsing="false" onAction="#listaEmprestimo" text="Lista de emprestimos" />
             <Button fx:id="btnlistaUsuarios" layoutX="160.0" layoutY="128.0" mnemonicParsing="false" onAction="#listaUsuario" text="Usuários" />
             </children>
         </Pane>
