--- a/CRUDEmp/src/view/LivrosEmprestados.fxml
+++ b/CRUDEmp/src/view/LivrosEmprestados.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="581.0" prefWidth="772.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EmprestadosController">
+<AnchorPane id="AnchorPane" prefHeight="650.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EmprestadosController">
    <children>
       <BorderPane layoutX="-7.0" layoutY="2.0" prefHeight="597.0" prefWidth="834.0">
          <center>
@@ -18,7 +18,7 @@
                       <TableColumn fx:id="tblColNome" prefWidth="138.0" text="Nome" />
                       <TableColumn fx:id="tblColLivro" prefWidth="93.0" text="Livro" />
                         <TableColumn fx:id="tblColDEmp" prefWidth="124.66667175292969" text="Dia do Emprestimo" />
-                        <TableColumn fx:id="tblColDEntrega" minWidth="3.0" prefWidth="114.66665649414062" text="Data de entrega" />
+                        <TableColumn fx:id="tblColDentrega" minWidth="3.0" prefWidth="114.66665649414062" text="Data de entrega" />
                         <TableColumn fx:id="tblColTelefone" prefWidth="99.0" text="Telefone" />
                         <TableColumn fx:id="tblColEndereco" prefWidth="90.33331298828125" text="Endereço" />
                         <TableColumn fx:id="tblColEmail" prefWidth="131.3333740234375" text="E-mail" />
@@ -30,14 +30,14 @@
          <bottom>
             <Pane prefHeight="97.0" prefWidth="834.0" BorderPane.alignment="CENTER">
                <children>
-                  <Button id="handleBtnAdd" fx:id="handleBtnAdd" layoutX="50.0" layoutY="7.0" mnemonicParsing="false" onAction="#cadEmp" text="Cadastrar Emprestimo" />
-                  <Button fx:id="edtUser" layoutX="226.0" layoutY="9.0" mnemonicParsing="false" onAction="#editEmp" text="Editar" />
-                  <Button fx:id="delPet" layoutX="302.0" layoutY="7.0" mnemonicParsing="false" onAction="#delEmp" text="Finalizar emprestimo" />
-                  <Button fx:id="fechar" layoutX="464.0" layoutY="9.0" mnemonicParsing="false" onAction="#fechar" text="Fechar" />
+                  <Button id="handleBtnAdd" fx:id="handleBtnAdd" layoutX="191.0" layoutY="1.0" mnemonicParsing="false" onAction="#cadEmp" text="Cadastrar Emprestimo" />
+                  <Button fx:id="edtUser" layoutX="367.0" layoutY="3.0" mnemonicParsing="false" onAction="#editEmp" text="Editar" />
+                  <Button fx:id="delPet" layoutX="443.0" layoutY="1.0" mnemonicParsing="false" onAction="#delEmp" text="Finalizar emprestimo" />
+                  <Button fx:id="fechar" layoutX="608.0" layoutY="2.0" mnemonicParsing="false" onAction="#fechar" text="Fechar" />
                </children></Pane>
          </bottom>
          <top>
-            <Pane prefHeight="75.0" prefWidth="834.0" BorderPane.alignment="CENTER">
+            <Pane prefHeight="71.0" prefWidth="846.0" BorderPane.alignment="CENTER">
                <children>
                   <Label layoutX="276.0" layoutY="26.0" text="Lista de Livros Emprestados">
                      <font>
