--- a/CRUDEmp/src/view/mainEmp.fxml
+++ b/CRUDEmp/src/view/mainEmp.fxml
@@ -6,10 +6,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainControllerEmp">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="420.0" prefWidth="692.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainControllerEmp">
    <top>
         <TableView id="tbllivro" fx:id="tbllivro" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <columns>
+            <TableColumn id="tblColEmprestado" fx:id="tblColID" prefWidth="103.0" text="ID" />
                 <TableColumn id="tblColTitulo" fx:id="tblColTitulo" prefWidth="274.0" text="Título" />
                 <TableColumn id="tblColAutor" fx:id="tblColAutor" minWidth="1.0" prefWidth="139.0" text="Autor" />
                 <TableColumn id="tblColEditora" fx:id="tblColEditora" prefWidth="83.0" text="Editora" />
@@ -24,8 +25,9 @@
                 <Button fx:id="edtLivro" layoutX="336.0" layoutY="128.0" mnemonicParsing="false" onAction="#editLivro" text="Editar livro" />
                 <Button fx:id="delLivro" layoutX="418.0" layoutY="128.0" mnemonicParsing="false" onAction="#delLivro" text="Deletar livro" />
                 <Button fx:id="fechar" layoutX="518.0" layoutY="161.0" mnemonicParsing="false" onAction="#fecharMet" text="Fechar" />
-            <Button fx:id="btnlistaEmprestimos" layoutX="25.0" layoutY="14.0" mnemonicParsing="false" onAction="#listaEmprestimo" text="Lista de emprestimos" />
+            <Button fx:id="btnlistaEmprestimos" layoutX="25.0" layoutY="14.0" mnemonicParsing="false" onAction="#listaEmprestimo" text="Cadastrar Empréstimo" />
             <Button fx:id="btnlistaUsuarios" layoutX="160.0" layoutY="128.0" mnemonicParsing="false" onAction="#listaUsuario" text="Usuários" />
+            <Button fx:id="btnLivrosEmprestados" layoutX="174.0" layoutY="14.0" mnemonicParsing="false" onAction="#handlerLivrosEmprestados" prefHeight="25.0" prefWidth="126.0" text="Livros Emprestados" />
             </children>
         </Pane>
    </left>
